# zero-g-reviewer

./: .env.example  .gitignore  GEMINI.md  README.md  REQUIREMENTS.md  pyproject.toml
.github/workflows/: ci.yml
doc/: DESIGN.md  WALKTHROUGH.md
examples/: example_mr.md  sample_review_comment.md
examples/instructions/: python_migration.md  security_focused.md  style_guide.md
scripts/: seed_knowledge.py
src/cr_agent/: __init__.py  agent.py  cli.py  config.py  context.py  git_ops.py  gitlab_client.py  graph.py  main.py  models.py  prompts.py  state.py  tools.py
src/cr_agent/agents/: __init__.py  domain_agent.py  general_reviewer.py  performance_agent.py  security_agent.py
tests/: test_context.py  test_git_ops.py  test_gitlab_client.py  testcr.py
